fix(breadcrumb): add text-shadow for improved readability

--- a/src/assets/scss/components/_breadcrumb.scss
+++ b/src/assets/scss/components/_breadcrumb.scss
@@ -18,6 +18,13 @@
 
       margin-right: 30px;
       color: white;
+
+      text-shadow:
+        -1px -1px 0 #696969,
+         1px -1px 0 #696969,
+        -1px  1px 0 #696969,
+         1px  1px 0 #696969;
+
       &:after {
         position: absolute;
         right: -15px;
@@ -43,6 +50,12 @@
     margin-bottom: 20px;
 
     color: $white;
+
+     text-shadow:
+    -1px -1px 0 #696969,
+     1px -1px 0 #696969,
+    -1px  1px 0 #696969,
+     1px  1px 0 #696969;
 
 @include respond(extra-large-mobile) {
       font-size: 35px;
